2015-11-27 Yann LEYDIER <yann@leydier.info>
	* Document (readTextWElements): Added support for <lb> @type="rejet".

2015-11-26 Yann LEYDIER <yann@leydier.info>
	* GUI (go_to): Added.
	* GUI (find_string, display_search): Bugfix.

2015-11-25 Yann LEYDIER <yann@leydier.info>
	* CharacterTree (cut, auto_cut): Added.

2015-11-24 Yann LEYDIER <yann@leydier.info>
	* ValidationPanel (tooltip): Bugfix.
	* CharacterTree: Added second panel.
	* GlyphSelection: Added.

2015-11-23 Yann LEYDIER <yann@leydier.info>
	* View (GetZoneImage): Bugfix.
	* Glyph (LocalId, GlobalId): Added.
	* Document (AddGlyph): Bugfix.
	* GUI (display_search): Bugfix.
	* View (AlignWordCharacters): Now adds a dummy signature when the 
																character has none.

2015-11-20 Yann LEYDIER <yann@leydier.info>
	* CharacterTree: Added.

2015-11-19 Yann LEYDIER <yann@leydier.info>
	* ValidationPanel: Removed threads. Tooltips are now computed in the main
	loop.
	* CharacterDialog: Added distances matrices.
	* GUI (load_project): Now shows a progress bar.

2015-11-18 Yann LEYDIER <yann@leydier.info>
	* Document (Save, GetDistanceMatrix, SetDistanceMatrix): Added.
	* View (GetZoneImage): Added.
	* GUI (display_search): Bugfix.
	* Validation (read_word): Bugfix.
	* Align: Bugfix.
	* CharacterDialog: Added.

2015-11-17 Yann LEYDIER <yann@leydier.info>
	* Glyph: Added.
	* Document (GetGlyph, AddGlyph, CollectCharacters): Added.
	* View (GetClusters): Added.
	* CharacterDialog: Added.

2015-11-16 Yann LEYDIER <yann@leydier.info>
	* trunk: Version 0.5.
	* OriStruct, OriProject: Removed.
	* OriDocument: Added (support for Oriflamms TEI guidelines).

2015-10-07 Yann LEYDIER <yann@leydier.info>
	* branch: Version 0.5.

2015-08-17 Yann LEYDIER <yann@leydier.info>
	* AlignConfig, AlignDialog, Project (AlignLine): Added option to 
			recompute words' frontiers without realigning.

2015-08-14 Yann LEYDIER <yann@leydier.info>
	* Project (AlignLine): Rewritten.